# tutorials

./: LICENSE  README.md
computer/cpp/cmake_lib_template/: CMakeLists.txt  LICENSE  README.md
computer/cpp/cmake_lib_template/cmake/: help.cmake
computer/cpp/cmake_lib_template/docs/: src下cmake分析.md  根目录cmake分析.md
computer/cpp/cmake_lib_template/example/: CMakeLists.txt  example_main.cc
computer/cpp/cmake_lib_template/include/mytest/: mytest.h
computer/cpp/cmake_lib_template/src/: CMakeLists.txt  config.hpp.in  mytest.cc
computer/cpp/cmake_lib_template/src/detail/: add.cc
computer/cpp/cmake_lib_template/test/: CMakeLists.txt  test_add.cc
computer/cpp/cmake_lib_template/tool/: CMakeLists.txt  tool_example.py  tool_example.sh
computer/cpp/cpp_cmake_template/: .gitignore  CMakeLists.txt  README.md
computer/cpp/cpp_cmake_template/src/: demo.cc
